2003-08-31  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSToolbarItem.m: Corrected code to instantiate
	button for toolbar items.

2003-08-30  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibTemplates.m: [GSNibContainer awakeWithContext:]
	was not releasing the connections in the array after calling
	establishConnection.   Once this is done, the connections
	are no longer needed.

2003-08-30  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindowController.m
	Changed [setWindow:] to manage the notification connection to the window.
	[initWithWindow:], [dealloc] and [_windowWillClose:] now use [setWindow:].
	[setDocument:] now no longer retains the document, as this is
	already retaining the window controller. Simplified [loadWindow]
	by using the method [windowNibPath].
	
2003-08-30  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibTemplates.m: Added code to templates to conditionally
	call the designated initializer if and only if it is defined
	on the class which is being unarchived, not the parent classes.
	This is consistent with behaviour under OpenStep.

2003-08-29  Adam Fedor  <fedor@gnu.org>

	* Source/GNUmakefile.preamble (ADDITIONAL_OBJCFLAGS): Include
	target dir for config.h (disable-flattened).

2003-08-29  Adam Fedor  <fedor@gnu.org>

	* Tools/gsnd/gsnd.m (main): Reopen stderr.

2003-08-29  Gregory John Casamento <greg_casamento@yahoo.com>

	* NSToolbarItem.[hm]: Implemented copyWithZone: for NSCopying,
	removed an unused flag and shortened the flag names which were
	somewhat long.  Did some general cleanup.  Implemented standard
	items.
	
2003-08-28  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibTemplates.m: Removed an extra release which was causing
	a segfault.  Added code to prevent calling the designated initializer
	when isInterfaceBuilder is defined.

2003-08-27  Adam Fedor  <fedor@gnu.org>

	* Tools/gsnd/gsnd.m (main): Set daemon flag when forking.
